--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
 		<link rel="preload" href="./images/sun.svg" as="image">
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="./styles/styles.css">
 	</head>
 	<body>
 		<div class="container">
@@ -32,19 +32,19 @@
 					<nav class="links-container">
 						<div class="link-container">
 							<img class="social-icon" src="./images/github.svg" alt="Black and white GitHub logo icon">
-							<a href="https://github.com/V-Wong" target="_blank">Github</a>
+							<a class="underline" href="https://github.com/V-Wong" target="_blank">Github</a>
 						</div>
 						<div class="link-container">
 							<img class="social-icon" src="./images/resume.svg" alt="Black and white icon with silhouette of person">
-							<a href="https://drive.google.com/file/d/1mqRF7QdBDXfDD7TLQ3OuanALxHxd_D2f/view?usp=sharing" target="_blank">Resume</a>
+							<a class="underline" href="https://drive.google.com/file/d/1mqRF7QdBDXfDD7TLQ3OuanALxHxd_D2f/view?usp=sharing" target="_blank">Resume</a>
 						</div>
 						<div class="link-container">
 							<img class="social-icon" src="./images/linkedin.svg" alt="Black and white LinkIn logo icon">
-							<a href="https://www.linkedin.com/in/vincent-wc-wong/" target="_blank">LinkedIn</a>
+							<a class="underline" href="https://www.linkedin.com/in/vincent-wc-wong/" target="_blank">LinkedIn</a>
 						</div>
 						<div id="dark-theme-button" class="link-container">
 							<img class="social-icon" src="./images/moon.svg" alt="Black and white moon icon">
-							<a>Dark</a>
+							<a class="underline">Dark</a>
 						</div>
 					</nav>
 				</div>
@@ -68,7 +68,7 @@
 					<div class="description">
 						<h3>LinkUp - Australian University Event Tracker</h3>
 						<h4 class="project-subheading">Full Stack Developer</h4>
-						<a class="demo-link" href="https://linkup.website/" target="_blank">Live Demo</a>
+						<a class="demo-link underline" href="https://linkup.website/" target="_blank">Live Demo</a>
 					</div>
 					<div class="image-container">
 						<img class="image" src="./images/linkup.svg"
@@ -114,7 +114,7 @@
 				<div class="card">
 					<h3>CubeSim</h3>
 					<h4 class="project-subheading">Rubiks Cube Simulation and Solving Program</h4>
-					<a class="repo-link" href="https://github.com/V-Wong/CubeSim" target="_blank">Repository</a>
+					<a class="repo-link underline" href="https://github.com/V-Wong/CubeSim" target="_blank">Repository</a>
 					<img class="image" src="./images/cube.webp"
 						alt="2D rendering of a Rubiks cube">
 					<ul>
@@ -143,8 +143,8 @@
 				<div class="card">
 					<h3>Huffman Encoding</h3>
 					<h4 class="project-subheading">Huffman Encoding Visualisation Tool</h4>
-					<a class="demo-link" href="https://v-wong.github.io/Huffman-Encoding" target="_blank">Live Demo</a>
-					<a class="repo-link" href="https://github.com/V-Wong/Huffman-Encoding" target="_blank">Repository</a>
+					<a class="demo-link underline" href="https://v-wong.github.io/Huffman-Encoding" target="_blank">Live Demo</a>
+					<a class="repo-link underline" href="https://github.com/V-Wong/Huffman-Encoding" target="_blank">Repository</a>
 					<img class="image" srcset="./images/new_huffman_mobile.webp 750w, ./images/new_huffman_small.webp 1600w"
 					 sizes="750w, (min-size: 1000px) 1600w"
 					 src="./images/new_huffman.webp"
@@ -180,7 +180,7 @@
 				<div class="card">
 					<h3>Full Stack Starter</h3>
 					<h4 class="project-subheading">Web Development Workflow Automator</h4>
-					<a class="repo-link" href="https://github.com/V-Wong/full-stack-starter" target="_blank">Repository</a>
+					<a class="repo-link underline" href="https://github.com/V-Wong/full-stack-starter" target="_blank">Repository</a>
 					<ul>
 						<li>
 							A portable set of tools to standardise and automate the creation of
@@ -210,7 +210,7 @@
 				<div class="card">
 					<h3>Reusable Components</h3>
 					<h4 class="project-subheading">Generic Cross Project React Components</h4>
-					<a class="repo-link" href="https://github.com/V-Wong/reusable-components" target="_blank">Repository</a>
+					<a class="repo-link underline" href="https://github.com/V-Wong/reusable-components" target="_blank">Repository</a>
 					<ul>
 						<li>
 							A set of common and simple generic React components designed
@@ -301,7 +301,7 @@
 				<div class="card">
 					<h3>COMP3821</h3>
 					<h4 class="project-subheading">Extended Algorithms and Programming Techniques</h4>
-					<a class="repo-link" href="https://github.com/V-Wong/COMP3821" target="_blank">Repository</a>
+					<a class="repo-link underline" href="https://github.com/V-Wong/COMP3821" target="_blank">Repository</a>
 					<ul>
 						<li>
 							Python implementation of common algorithms.
@@ -329,8 +329,8 @@
 				<div class="card">
 					<h3>LeetCode</h3>
 					<h4 class="project-subheading">Competitive Programming</h4>
-					<a class="demo-link" href="https://leetcode.com/v-wong/" target="_blank">LeetCode Profile</a>
-					<a class="repo-link" href="https://github.com/V-Wong/LeetCode-Practice" target="_blank">Repository</a>
+					<a class="demo-link underline" href="https://leetcode.com/v-wong/" target="_blank">LeetCode Profile</a>
+					<a class="repo-link underline" href="https://github.com/V-Wong/LeetCode-Practice" target="_blank">Repository</a>
 					<ul>
 						<li>
 							Python solutions to various LeetCode problems.
@@ -362,7 +362,7 @@
 					<div class="description">
 						<h3>UNSW Rubik Society</h3>
 						<h4 class="project-subheading">Executive - Events Director</h4>
-						<a class="demo-link" href="https://www.facebook.com/UNSWRubikSoc/" target="_blank">Society Page</a>
+						<a class="demo-link underline" href="https://www.facebook.com/UNSWRubikSoc/" target="_blank">Society Page</a>
 					</div>
 					<div class="image-container">
 						<img class="image" src="./images/rubiksoc_small.webp" 
@@ -398,7 +398,7 @@
 					<div class="description">
 						<h3>Competitive Rubik's Cube Speedsolver</h3>
 						<h4 class="project-subheading">Participant in WCA competitions</h4>
-						<a class="demo-link" href="https://www.worldcubeassociation.org/persons/2014WONG08" target="_blank">WCA Profile</a>
+						<a class="demo-link underline" href="https://www.worldcubeassociation.org/persons/2014WONG08" target="_blank">WCA Profile</a>
 					</div>
 					<div class="image-container">
 						<img class="image" src="./images/comp-cube.svg" 
